Use Typescript for Electron build

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "graphql": "14.5.8",
     "graphql-tag": "2.10.1",
     "history": "4.10.1",
-    "influx-api": "0.1.4",
     "lodash": "4.17.15",
     "mui-datatables": "2.13.3",
     "papaparse": "5.1.0",
@@ -50,16 +49,17 @@
     "db:start": "docker-compose -f dev-db/docker-compose.yml up",
     "test": "TZ=Europe/Warsaw react-scripts test src --bail --runInBand",
     "lint": "eslint './src/**/*.{ts,tsx,js,jsx}'",
-    "electron:dev": "ELECTRON_IS_DEV=1 ELECTRON_START_URL=http://localhost:3000 electron .",
+    "electron:dev": "yarn electron:build && ELECTRON_IS_DEV=1 ELECTRON_START_URL=http://localhost:3000 electron .",
+    "electron:build": "tsc --build tsconfig.electron.json",
     "electron": "ELECTRON_IS_DEV=1 electron .",
-    "electron:stag": "electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
+    "electron:stag": "yarn electron:build && electron-builder -m -c.compression=store -c.extraMetadata.main=build/electron.js",
     "electron:prod": "yarn dist:mac",
     "dist:docker": "yarn build && sh -ac 'source ./.env; docker build . -t timeseriesadmin/timeseriesadmin:$REACT_APP_VERSION'",
     "release:docker": "sh -ac 'source ./.env; docker tag timeseriesadmin/timeseriesadmin:$REACT_APP_VERSION timeseriesadmin/timeseriesadmin:latest && docker push timeseriesadmin/timeseriesadmin:latest && docker push timeseriesadmin/timeseriesadmin:$REACT_APP_VERSION'",
-    "dist:mac": "yarn build && electron-builder -m -c.extraMetadata.main=build/electron.js",
-    "dist:win": "yarn build && electron-builder -w -c.extraMetadata.main=build/electron.js",
-    "dist:linux": "yarn build && electron-builder -l -c.extraMetadata.main=build/electron.js",
-    "dist:all": "yarn dist:docker && electron-builder -mwl -c.extraMetadata.main=build/electron.js",
+    "dist:mac": "yarn build && yarn electron:build && electron-builder -m -c.extraMetadata.main=build/electron.js",
+    "dist:win": "yarn build && yarn electron:build && electron-builder -w -c.extraMetadata.main=build/electron.js",
+    "dist:linux": "yarn build && yarn electron:build && electron-builder -l -c.extraMetadata.main=build/electron.js",
+    "dist:all": "yarn dist:docker && yarn electron:build && electron-builder -mwl -c.extraMetadata.main=build/electron.js",
     "cypress:run": "cypress run --browser chrome",
     "cypress:open": "cypress open",
     "ci:test": "TZ=Europe/Warsaw CI=true react-scripts test --coverage --runInBand --bail  && codecov -t 1034d70c-6870-4421-986f-6ac405850292",
@@ -69,6 +69,7 @@
     "@apollo/react-testing": "3.1.3",
     "@testing-library/cypress": "5.0.2",
     "@testing-library/react": "9.3.3",
+    "@types/qs": "^6.9.0",
     "@typescript-eslint/eslint-plugin": "2.11.0",
     "@typescript-eslint/parser": "2.11.0",
     "babel-eslint": "10.0.3",
