--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@apollo/react-testing": "3.1.3",
     "@testing-library/cypress": "5.0.2",
     "@testing-library/react": "9.4.0",
+    "@types/qs": "6.9.0",
     "@typescript-eslint/eslint-plugin": "2.12.0",
     "@typescript-eslint/parser": "2.12.0",
     "babel-eslint": "10.0.3",
