--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs: # a collection of steps
       - restore_cache: # special step to restore the dependency cache
           key: node-cache{{ checksum "package.json" }}
       - run:
-          command: yarn install
+          command: npm install
       - save_cache: # special step to save the dependency cache
           key: node-cache{{ checksum "package.json" }}
           paths:
@@ -29,9 +29,9 @@ jobs: # a collection of steps
       - restore_cache: # special step to restore the dependency cache
           key: node-cache{{ checksum "package.json" }}
       - run:
-          command: yarn install
+          command: npm install
       - run:
-          command: yarn ci:test
+          command: npm run ci:test
 
   run_e2e_tests:
     docker:
@@ -50,15 +50,15 @@ jobs: # a collection of steps
     steps:
       - checkout # special step to check out source code to working directory
       - run:
-          command: yarn install
+          command: npm install
       - run:
-          command: yarn start
+          command: npm run start
           background: true
       - run:
-          command: yarn wait-on -d 60000 http://localhost:3000
-          # command: yarn wait-on http://localhost:3000 && yarn wait-on http://localhost:8086/ping
+          command: npm run wait-on -d 60000 http://localhost:3000
+          # command: npm run wait-on http://localhost:3000 && npm run wait-on http://localhost:8086/ping
       - run:
-          command: yarn ci:cypress
+          command: npm run ci:cypress
 
 workflows:
   tests:
