--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,14 @@
 {
   "extends": ["config:base"],
   "docker-compose": {
-    "enabled": false,
+    "enabled": false
   },
   "baseBranches": ["develop"],
   "automerge": true,
   "minor": {
-    "automerge": true,
+    "automerge": true
   },
   "major": {
-    "automerge": false,
+    "automerge": false
   }
 }
