--- a/package.json
+++ b/package.json
@@ -2,45 +2,45 @@
   "name": "timeseriesadmin",
   "description": "Administration and querying interface for InfluxDB databases",
   "author": "Jan Grzegorowski <grzegorowski@gmail.com> (https://grzegorowski.com)",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "private": false,
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "4.8.3",
-    "@material-ui/icons": "4.5.1",
-    "@types/classnames": "2.2.9",
-    "@types/jest": "24.9.1",
+    "@material-ui/core": "4.9.8",
+    "@material-ui/icons": "4.9.1",
+    "@types/classnames": "2.2.10",
+    "@types/jest": "25.1.4",
     "@types/lodash": "4.14.149",
     "@types/mui-datatables": "2.13.4",
-    "@types/node": "12.12.26",
+    "@types/node": "12.12.32",
     "@types/papaparse": "5.0.3",
-    "@types/react": "16.9.19",
+    "@types/react": "16.9.27",
     "@types/react-dom": "16.9.5",
     "@types/react-inspector": "4.0.0",
-    "@types/webpack-env": "1.15.0",
+    "@types/webpack-env": "1.15.1",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
     "axios": "0.19.2",
-    "compare-versions": "3.5.1",
-    "date-fns": "2.9.0",
+    "compare-versions": "3.6.0",
+    "date-fns": "2.11.1",
     "final-form": "4.18.7",
     "graphql": "14.6.0",
-    "graphql-tag": "2.10.1",
+    "graphql-tag": "2.10.3",
     "history": "4.10.1",
     "lodash": "4.17.15",
     "mui-datatables": "2.14.0",
     "papaparse": "5.1.1",
-    "qs": "6.9.1",
-    "react": "16.12.0",
+    "qs": "6.9.3",
+    "react": "16.13.1",
     "react-apollo": "3.1.3",
-    "react-dom": "16.12.0",
+    "react-dom": "16.13.1",
     "react-final-form": "6.3.5",
-    "react-inspector": "4.0.0",
+    "react-inspector": "5.0.1",
     "react-popper": "1.3.7",
-    "react-scripts": "3.3.0",
-    "react-use": "13.22.3",
-    "typescript": "3.7.5"
+    "react-scripts": "3.4.0",
+    "react-use": "13.27.1",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "clean": "npm run rimraf dist",
@@ -67,23 +67,24 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.3",
-    "@testing-library/cypress": "5.1.0",
-    "@testing-library/react": "9.4.0",
-    "@types/qs": "6.9.0",
-    "@typescript-eslint/eslint-plugin": "2.18.0",
-    "@typescript-eslint/parser": "2.18.0",
-    "babel-eslint": "10.0.3",
+    "@testing-library/cypress": "6.0.0",
+    "@testing-library/react": "10.0.1",
+    "@types/qs": "6.9.1",
+    "@typescript-eslint/eslint-plugin": "2.25.0",
+    "@typescript-eslint/parser": "2.25.0",
+    "babel-eslint": "10.1.0",
     "babel-polyfill": "6.26.0",
     "codecov": "3.6.5",
-    "cypress": "3.7.0",
-    "electron": "7.1.10",
-    "electron-builder": "21.2.0",
+    "cypress": "4.2.0",
+    "electron": "8.2.0",
+    "electron-builder": "22.4.1",
     "electron-debug": "3.0.1",
     "eslint": "6.8.0",
-    "eslint-plugin-react": "7.18.0",
-    "prettier": "1.19.1",
-    "rimraf": "3.0.1",
-    "wait-on": "4.0.0"
+    "eslint-plugin-react": "7.19.0",
+    "nan": "^2.14.0",
+    "prettier": "2.0.2",
+    "rimraf": "3.0.2",
+    "wait-on": "4.0.1"
   },
   "main": "public/electron.js",
   "_homepage": "homepage value should not be changed or Electron will not be able to localize source files",
