Fix hyphens in measurement names

--- a/dev-db/docker-compose.yml
+++ b/dev-db/docker-compose.yml
@@ -15,9 +15,8 @@ services:
       - INFLUXDB_ADMIN_USER=admin
       - INFLUXDB_ADMIN_PASSWORD=password
       # comment out to use without SSL
-      - INFLUXDB_HTTP_HTTPS_ENABLED=true
-      - INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert/certificate.pem
-      - INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/cert/key.pem
-
+      # - INFLUXDB_HTTP_HTTPS_ENABLED=true
+      # - INFLUXDB_HTTP_HTTPS_CERTIFICATE=/cert/certificate.pem
+      # - INFLUXDB_HTTP_HTTPS_PRIVATE_KEY=/cert/key.pem
 # In order to simulate unsafe SSL add the following entry to your /etc/hosts file and access database from test.dev URL
 # 127.0.0.1 test.dev
