Update mui-datatables dependency

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/classnames": "2.2.10",
     "@types/jest": "25.2.3",
     "@types/lodash": "4.14.159",
-    "@types/mui-datatables": "2.14.2",
+    "@types/mui-datatables": "3.4.0",
     "@types/node": "12.12.54",
     "@types/papaparse": "5.0.6",
     "@types/react": "16.9.44",
@@ -22,6 +22,7 @@
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
     "axios": "0.19.2",
+    "classnames": "^2.2.6",
     "compare-versions": "3.6.0",
     "date-fns": "2.15.0",
     "final-form": "4.20.1",
@@ -29,7 +30,7 @@
     "graphql-tag": "2.11.0",
     "history": "4.10.1",
     "lodash": "4.17.19",
-    "mui-datatables": "2.15.0",
+    "mui-datatables": "3.4.1",
     "papaparse": "5.2.0",
     "qs": "6.9.4",
     "react": "16.13.1",
